See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.96.00

21.06.30 BJH  Release 10.95.00

              pamtopng: Fix rejection of all BLACKANDWHITE_ALPHA images with
              message about wrong depth.  Always broken (pamtopng was new in
              Netpbm 10.71 (June 2015)).  Thanks Karol Kosek
              <krkk@krkk.ct8.pl>.

              pamtopng: Fix failure with GRAYSCALE_ALPHA images with maxval
              less than 255.  Always broken (pamtopng was new in Netpbm 10.71
              (June 2015)).  Thanks Karol Kosek <krkk@krkk.ct8.pl>.
              
              pamtopng: Fix: treats all tuple types that start with BLA as
              BLACKANDWHITE.  Always broken (pamtopng was new in Netpbm 10.71
              (June 2015)).

              pamtopng: Fix -transparent option - program recognized
              -transparency instead.  Always broken (pamtopng was new in
              Netpbm 10.71 (June 2015)).

              pamtogif: Fix failure with bogus message about wrong depth with
              grayscale and black and white PAM images with transparency.
              Always broken (pamtogif was new in Netpbm 10.37 (December 2006)).
              Thanks Karol Kosek <krkk@krkk.ct8.pl>.

              ppmtogif: Same as 'pamtogif' fix above, but with -alpha option.
              
              Build: Fix build failure due to missing 'random' function on
              Mingw platform.  Bug introduced in Netpbm 10.94 (March 2021).

              Build: Don't attempt to build 'pamexec' on systems without
              Unix process management.  Bug introduced in Netpbm 10.94
              (March 2021).

              Build: Make it work on systems that don't have date +%s.  Broken
              in Netpbm 10.78 (March 2017).  Thanks Claes Nästén
              (pekdon@gmail.com).

              Build: Fix for MacOS build failures with missing sprintf and