@@ -6,6 +6,9 @@ CHANGE HISTORY
 
 not yet  BJH  Release 10.96.00
 
+              pamstereogram: Fix crash with -xbegin=0.  Thanks Scott Pakin.
+              Introduced in Netpbm 10.94.
+
 21.06.30 BJH  Release 10.95.00
 
               pamtopng: Fix rejection of all BLACKANDWHITE_ALPHA images with
